[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/DeckCarousel/cardnotecell.gd" type="Script" id=1]
[ext_resource path="res://app icons/Add.png" type="Texture" id=2]
[ext_resource path="res://fonts/OxygenMono-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/Complimentary.tres" type="Theme" id=4]
[ext_resource path="res://app icons/Check.png" type="Texture" id=5]
[ext_resource path="res://scripts/DeckCarousel/ExpandingTextEdit.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -20.0
margin_bottom = -1720.0
rect_min_size = Vector2( 1080, 200 )
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_left = 400.0
margin_right = 680.0
margin_bottom = 200.0
rect_min_size = Vector2( 280, 200 )
mouse_filter = 2
size_flags_vertical = 3
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 25.0
margin_top = 25.0
margin_right = 1055.0
margin_bottom = 179.0
rect_min_size = Vector2( 1030, 154 )
mouse_filter = 2
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
margin_right = 1030.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_readonly = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 2 )
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
wrap_enabled = true
script = ExtResource( 6 )

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 1030.0
margin_bottom = 154.0
mouse_filter = 2

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/CenterContainer"]
visible = false
margin_left = 465.0
margin_top = -50.0
margin_right = 565.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 100 )
mouse_filter = 1
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="AddNote" type="TextureButton" parent="."]
margin_left = 440.0
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
mouse_filter = 1
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[connection signal="button_up" from="VBoxContainer/CenterContainer/TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="pressed" from="AddNote" to="." method="_on_AddNote_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
